<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UpToTop</string>
    <string name="user_config">User Profile</string>
	
	<string name="btn_start">Start</string>
	<string name="btn_end">End</string>
	<string name="btn_take">Take</string>
	<string name="btn_up">Up</string>
	
	<string name="image_capture">Image capture</string>
	<string name="price">Price</string>
	<string name="name">Name</string>
	<string name="description">Description:</string>
	<string name="send">Send</string>
	<string name="cancel">Cancel</string>
	<string name="share_btn">Share</string>
	<string name="share_to">Share To</string>
	<string name="file_not_found">File not found: </string>
	<string name="file_accsess_error">Error accessing file</string>
	<string name="create_obj">Create Objective</string>
	<string name="user_name">Your Name:</string>
	<string name="old_password">Old Password:</string>
	<string name="new_password">New Password:</string>
	<string name="confirm_password">Confirm Password:</string>
	<string name="password">Password:</string>
	<string name="location">Location:</string>
	
	
	<string name="pick_exctp">Error upload image</string>
	
	<string name="success">Success</string>
	<string name="loginLenShort">Login Name: Please enter at least 4 symbols</string>
	<string name="passwordLenShort">Password: Please enter at least 6 symbols</string>
	<string name="passwordNotEqual">Password: "Confirm" password do not match</string>
	<string name="wrongPassword">Wrong Password</string>
	<string name="remember_me">Rememeber Me</string>
	
	
	<string name="btn_send">Send</string>
	<string name="btn_submit">Submit</string>
	<string name="btn_save">Save</string>
	<string name="btn_cancel">Cancel</string>
	
	<string name="msg_req">Required field [</string>
	<string name="msg_empty">] is empty.</string>
	
	<string name="base_uri">http://bazzilla.com/restapi/create</string>
	
	<string name="action_search">Search</string>
	<string name="action_compose">Compose</string>
	
	<string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
	<string name="action_update">Update</string>
	
	<string name="action_view_objective">View Objectives</string>
	<string name="action_user_profile">User Profile</string>
	
	<string name="welcome">Authorization</string>
	<string name="fieldEmpty">Requiired field is empty</string>
	
	<string name="objective_status">On moderation</string>
	
	<string name="my_objectives">My objectives (Balance: $20.00)</string>
	<string name="gps_disable">GPS отключен</string>
	 
	
</resources>
