<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/allfons_1"
    android:orientation="vertical"
    android:padding="@dimen/preview_padding" >

    <TextView
        style="@style/.labels_bold"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/user_config" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center|top"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/avatarImageId"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerInParent="true"
            android:src="@drawable/avatar"
            android:adjustViewBounds="true" >
        </ImageView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="horizontal" />
    </LinearLayout>

    <TextView
        style="@style/.labels"
        android:id="@+id/phoneTextId"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/user_name" />
    <TextView
        style="@style/.labels"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/user_name" />

    <EditText
        style="@style/.edit_txt"
        android:id="@+id/userLoginId"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:inputType="text"
        />

    <TextView
        style="@style/.labels"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/old_password" />

    <EditText
        style="@style/.edit_txt"
        android:id="@+id/oldPasswordId"
        android:layout_width="fill_parent"
        android:layout_height="35dp" 
        android:inputType="textPassword"
        />

    <TextView
        style="@style/.labels"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/new_password" />

    <EditText
        style="@style/.edit_txt"
        android:id="@+id/newPasswordId"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:inputType="textPassword" 
        />
    
     <TextView
        style="@style/.labels"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/confirm_password" />

    <EditText
        style="@style/.edit_txt"
        android:id="@+id/confirmPasswordId"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:inputType="textPassword" 
        />
    
    <TextView
        style="@style/.labels"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/location" />

    <EditText
        style="@style/.edit_txt"
        android:id="@+id/locationId"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:inputType="text" 
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            style="@style/.labels"
            android:id="@+id/userProfileSaveId"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_shape"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/btn_save" />
        
         <Button
            style="@style/.labels"
            android:id="@+id/userProfileCancelId"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_shape_dis"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>