<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogId"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="top|center"
    android:paddingTop="50sp" 
    android:orientation ="vertical"
    >
    <LinearLayout
        android:layout_width="300sp"
        android:layout_height="230sp"
        android:paddingTop="20sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:background="@drawable/border_dialog"
        android:orientation ="vertical"
         >
         <TextView
            style="@style/.dialogLbl"
      		android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
      		android:text="@string/description"
      		/>
         <EditText 
             style="@style/.dialogEdit"
             android:id="@+id/descEditId"
             android:layout_width="fill_parent"
      		 android:layout_height="wrap_content"
             />
         <TextView
            style="@style/.dialogLbl"
      		android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
      		android:text="@string/price"
      		/>
         <EditText 
             style="@style/.dialogEdit"
             android:id="@+id/priceEditId"
             android:layout_width="fill_parent"
      		 android:layout_height="wrap_content"
             />
         <LinearLayout
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:orientation="horizontal"
	         android:layout_alignParentBottom="true"
	         android:layout_marginTop="15sp"
         >
	        <Button
	            style="@style/.dialogLbl"
	            android:id="@+id/btnSendId"
	            android:layout_width="0dp"
	      		android:layout_height="wrap_content"
	      		android:layout_weight="0.3"
	      		android:text="@string/btn_send"
	      		android:paddingTop="10sp"
	            android:paddingBottom="10sp"
	            android:layout_marginRight="5sp"
	      		android:background="@drawable/border_shape_dis"
	            />
	        <Button
	            style="@style/.dialogLbl"
	            android:id="@+id/btnSaveId"
	            android:layout_width="0dp"
	      		android:layout_height="wrap_content"
	      		android:layout_weight="0.3"
	      		android:text="@string/btn_save"
	      		android:paddingTop="10sp"
	            android:paddingBottom="10sp"
	            android:layout_marginRight="5sp"
	      		android:background="@drawable/border_shape_dis"
	            />
	        <Button
	            style="@style/.dialogLbl"
	            android:id="@+id/btnCancelId"
	            android:layout_width="0dp"
	      		android:layout_height="wrap_content"
	      		android:layout_weight="0.3"
	      		android:text="@string/btn_cancel"
	      		android:paddingTop="10sp"
	            android:paddingBottom="10sp"
	      		android:background="@drawable/border_shape"
	            />
    </LinearLayout>
    </LinearLayout>
    
</RelativeLayout>
