<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
     >
    <LinearLayout
        android:id="@+id/previewId" 
    	android:layout_height="0dip"
    	android:layout_width="fill_parent"
    	android:orientation="vertical"
    	 android:paddingTop="@dimen/activity_vertical_margin"
    	android:layout_weight="0.65"
        >
        <ImageView
            android:id="@+id/previewImageId" 
            android:layout_height="match_parent"
    		android:layout_width="match_parent"
    		android:orientation="vertical"
            />
    </LinearLayout>
    
    <LinearLayout
    	android:layout_height="0dip"
    	android:layout_width="fill_parent"
    	android:orientation="vertical"
    	android:layout_weight="0.35"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
		        <TextView
		            android:layout_height="wrap_content"
		    		android:layout_width="0dip" 
		    		android:layout_weight="0.3"
		            android:text="@string/description"/>
		        <EditText
		             android:id="@+id/descriptionId" 
		            android:layout_height="wrap_content"
		    		android:layout_width="0dip" 
		    		android:layout_weight="0.7"
		            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
		        <TextView
		            android:layout_height="wrap_content"
		    		android:layout_width="0dip"
		    		android:layout_weight="0.3" 
		            android:text="@string/price"/>
		        <EditText
		            android:id="@+id/priceId" 
		            android:layout_height="wrap_content"
		    		android:layout_width="0dip"
		    		android:layout_weight="0.7" 
		            />
		 </LinearLayout>
		 <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp" >
		        <Button
		            android:layout_height="wrap_content"
		    		android:layout_width="0dip"
		    		android:layout_weight="1" 
		            android:text="@string/send"/>
		        <Button
		            android:layout_height="wrap_content"
		    		android:layout_width="0dip"
		    		android:layout_weight="1" 
		            android:text="@string/cancel"/>
		 </LinearLayout>        
    </LinearLayout>
    

</LinearLayout>
